samples/_failures_safe/1761317990_35d6aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1147b4d3.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_1147b4d3.c:143:13: error: expected identifier at end of input
  143 |             result->data[j][i] = m->
      |             ^~~~~~
./samples/SAFE/__tmp_1147b4d3.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1147b4d3.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1147b4d3.c:143:13: error: expected declaration or statement at end of input
